version 2017.04.28

Core
+ [adobepass] Use geo verification headers for all requests
- [downloader/fragment] Remove assert for resume_len when no fragments
  downloaded
+ [extractor/common] Add manifest_url for explicit group rendition formats
* [extractor/common] Fix manifest_url for m3u8 formats
- [extractor/common] Don't list master m3u8 playlists in format list (#12832)

Extractor
* [aenetworks] Fix extraction for shows with single season
+ [go] Add support for Disney, DisneyJunior and DisneyXD show pages
* [youtube] Recognize new locale-based player URLs (#12885)
+ [streamable] Add support for new embedded URL schema (#12844)
* [arte:+7] Relax URL regular expression (#12837)


version 2017.04.26

Core
* Introduce --keep-fragments for keeping fragments of fragmented download
  on disk after download is finished
* [YoutubeDL] Fix output template for missing timestamp (#12796)
* [socks] Handle cases where credentials are required but missing
* [extractor/common] Improve HLS extraction (#12211)
    - Extract m3u8 parsing to separate method
    - Improve rendition groups extraction
    - Build stream name according stream GROUP-ID
    - Ignore reference to AUDIO group without URI when stream has no CODECS
    - Use float for scaled tbr in _parse_m3u8_formats
* [utils] Add support for TTML styles in dfxp2srt
* [downloader/hls] No need to download keys for fragments that have been
  already downloaded
* [downloader/fragment] Improve fragment downloading
    - Resume immediately
    - Don't concatenate fragments and decrypt them on every resume
    - Optimize disk storage usage, don't store intermediate fragments on disk
    - Store bookkeeping download state file
+ [extractor/common] Add support for multiple getters in try_get
+ [extractor/common] Add support for video of WebPage context in _json_ld
  (#12778)
+ [extractor/common] Relax JWPlayer regular expression and remove
  duplicate URLs (#12768)

Extractors
* [iqiyi] Fix extraction of Yule videos